# integrity

./: INTERVIEW_PRESENTATION.md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/givaldo/app/: AppApplication.kt  AppListItem.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/dev/givaldo/app/initializer/: IntegrityInitializer.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/dev/givaldo/app/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
integrity/: build.gradle.kts  proguard-rules.pro
integrity/src/androidTest/java/dev/givaldo/integrity/: ExampleInstrumentedTest.kt
integrity/src/main/cpp/: CMakeLists.txt  root_detection.c  virtualization_detection.c
integrity/src/main/kotlin/dev/givaldo/integrity/: Integrity.kt  IntegrityDetectionsListener.kt  IntegrityException.kt  IntegrityResult.kt  ValidationType.kt
integrity/src/main/kotlin/dev/givaldo/integrity/analyzer/: IntegrityAnalyzer.kt  IntegrityAnalyzerImpl.kt
integrity/src/main/kotlin/dev/givaldo/integrity/background/: BackgroundChecker.kt  IntegrityLifecycleObserver.kt
integrity/src/main/kotlin/dev/givaldo/integrity/checker/: IntegrityChecker.kt  IntegrityCheckerRegistry.kt
integrity/src/main/kotlin/dev/givaldo/integrity/common/: InstalledAppsExt.kt
integrity/src/main/kotlin/dev/givaldo/integrity/configuration/: IntegrityConfiguration.kt  IntegrityConfigurationBuilder.kt
integrity/src/test/java/dev/givaldo/integrity/: ExampleUnitTest.kt
(+26 files in other folders)
